# gst-plugin-s3

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  s3src.rs  s3url.rs
