[package]
name = "gst-plugin-s3"
version = "0.3.0"
authors = ["Arun Raghavan <arun@arunraghavan.net>"]
repository = "https://github.com/ford-prefect/gst-plugin-s3"
license = "MIT/Apache-2.0"

[dependencies]
futures = "0.1"
glib = "0.7"
gstreamer = { version = "0.13", features = [ "subclassing" ] }
gstreamer-base = { version = "0.13", features = [ "subclassing" ] }
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
url = "1.7"

[lib]
name = "gsts3"
crate-type = ["cdylib"]
